<resources>
    <string name="app_name">RimeSyariFix</string>
    <string name="tab_text_1">KHIMAR</string>
    <string name="tab_text_2">MASKER</string>
    <string name="tab_text_3">GAMIS</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">cari</string>
    <string name="title_activity_lol">LolActivity</string>
    <string name="kurang"><![CDATA[<]]></string>
    <string name="tambah"><![CDATA[>]]></string>
    <string name="menu_reseller">Daftar jadi Reseller</string>
    <string name="menu_pengiriman">Status Pengiriman</string>
    <string name="menu_transaksi">Riwayat Transaksi</string>
    <string name="menu_settings">Pengaturan</string>
    <string name="menu_about">Tentang</string>
    <string name="menu_logout">Logout</string>
    <string name="label_info_reseller">Daftar jadi Reseller</string>
    <string name="label_home">Beranda</string>
    <string name="label_riwayat_transaksi">Riwayat Transaksi</string>
    <string name="label_settings">Pengaturan</string>
    <string name="label_tentang">Tentang</string>
</resources>